fix spacing on form charity page and login css

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .PledgeAmount-container {
   background-color: lightblue;
   text-align: left;
-  padding-left: 50px;
-  padding-top: 40px;
+  padding-left: 30px;
+  padding-top: 1px;
+  padding-right: 40px;
+  padding-bottom: 20px;
 }
 
 .App {
@@ -43,19 +45,7 @@
   background-color: #8ac852;
 }
 
-.wrap {
-  padding-top: 10px;
-  margin: 0;
-  width: 90%;
-  display: 'flex';
-  align-items: flex-start;
-  align-content: center;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  background: cyan;
-  white-space:normal;
-  overflow-x: scroll;
-}
+
 
 /* display:inline-block;
 width:100%;
