--- a/src/login.css
+++ b/src/login.css
@@ -1,30 +1,33 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+/*
 .body {
-  /* background-color: #76b852; */
+ background-color: #76b852;
   background-color: red;
 }
 
 .login-background {
   background: #76b852;
-}
+} */
 
+/* top padding */
 .login-page {
   width: 360px;
-  padding: 15% 0 0;
+  padding: 20% 0 0;
   margin: auto;
 }
-.form {
+/* bounding box */
+.login-form {
   position: relative;
   z-index: 1;
-  background: #FFFFFF;
+  background: #FFF;
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
-.form input {
+.login-form input {
   font-family: "Roboto", sans-serif;
   outline: 0;
   background: #f2f2f2;
